# deli-menu

./: .env-sample  .travis.yml  README.md  README.rst  requirements.txt  setup.cfg  tox.ini  wsgi.ini
deli_menu/: settings.py
deli_menu/http/: wsgi.py
deli_menu/http/mounts/root/: mount.py
deli_menu/http/mounts/root/routes/: metadata.py  securitydata.py  userdata.py
