[metadata]
name = deli-menu
author = Ryan Belgrave
author-email = rmb1993@gmail.com
summary = Metadata Service for Sandwich Cloud
description-file = README.rst
home-page = https://github.com/sandwichcloud/deli-menu
license = MIT
classifier =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Internet :: WWW/HTTP :: WSGI :: Application

[files]
packages =
    deli_menu

[pbr]
skip_authors = 1
skip_changelog = 1